--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "honray/wk-extension",
     "type": "library",
+    "version": "1.0.0",
     "require-dev": {
         "phpunit/phpunit": "^8.0"
     },
@@ -22,7 +23,7 @@
     },
     "require": {
         "nikic/php-parser": "^4.3",
-        "symfony/console": "^5.0",
+        "symfony/console": "^4.0",
         "topthink/framework": "6.0.*"
     },
     "repositories": [
@@ -31,6 +32,7 @@
             "url": "https://mirrors.aliyun.com/composer/"
         }
     ],
+    "minimum-stability": "dev",
     "bin": [
         "bin/wke"
     ]
