--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
     "name": "honray/wk-extension",
     "type": "library",
-    "version": "1.0.0",
+    "version": "v1.0.4",
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "topthink/framework": "6.0.*"
     },
     "authors": [
         {
@@ -23,8 +24,7 @@
     },
     "require": {
         "nikic/php-parser": "^4.3",
-        "symfony/console": "^4.0",
-        "topthink/framework": "6.0.*"
+        "symfony/console": "^4.0"
     },
     "repositories": [
         {
